# tds-quiz-solver

./: .dockerignore  .env.example  Dockerfile  agent.py  docker-compose.yml  main.py  pyproject.toml  test_aipipe.py
LLMFiles/: runner.py
app/: config.py  logger.py  main.py  models.py  solver.py  timer.py
app/agent/: __init__.py  prompts.py  solver.py
app/llm/: __init__.py  client.py
app/loader/: __init__.py  page_loader.py
app/primitives/: analyze.py  browser.py  download.py  parse.py  submit.py  visualize.py
app/tools/: core_add_dependencies.py  core_download_file.py  core_list_installed.py  core_run_code.py  core_send_request.py  core_web_scraper.py  registry.py  utility_summarize.py  utility_time.py
app/utils/: exceptions.py  helpers.py
scripts/: test_batch2.py  test_foundation.py  test_llm.py
tools/: __init__.py  add_dependencies.py  download_file.py  list_dependencies.py  memory.py  ocr_image.py  run_code.py  send_request.py  transcribe_audio.py  web_scraper.py
